бд и апи для тренировок
